[tool.poetry]
name = "eye_tracker"
version = "0.1.0"
description = ""
authors = ["Bluemi <bruno.schilling@protonmail.ch>"]

[tool.poetry.dependencies]
python = "3.8"
opencv-python = "3.4.*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
